--- a/alendar/build.gradle
+++ b/alendar/build.gradle
@@ -24,7 +24,11 @@ repositories {
 }
 
 dependencies {
+	// SpringBoot에서 JPA를 사용하려는 경우 필요한 의존성. 이 패키지에는 Spring Data JPA와 Hibernate를 포함하며 데이터베이스와의 상호작용을 지원.
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//MySQL 데이터 베이스와의 연결을 위해 필요한 MySQL JDBC 드라이버 연결 지원
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
